[project]
name = ""
version = ""
description = ""
authors = [
    {name = "StarryCamile,ltzXiaoYanMo", email = "xiajiaruimail@qq.com"},
]
dependencies = [
    "requests",
    "scapy",
    "impacket",
    "paramiko",
    "loguru>=0.7.2",
    "logger>=1.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "WTFPL"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
