[project]
name = "PyCore"
version = "114514.1919810"
description = "SBFLSQ"
authors = [
    {name = "StarryCamile,ltzXiaoYanMo", email = "xiajiaruimail@qq.com"},
    {name = "StarryCamile", email = "1487084645@qq.com"}
]
dependencies = [
    "requests",
    "scapy",
    "impacket",
    "paramiko",
    "loguru>=0.7.2",
    "logger>=1.4",
    "WMI~=1.5.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "WTFPL"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
